add initial styles

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
 			"svelte": "./dist/index.js"
 		}
 	},
+	"dependencies": {
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16"
+	},
 	"peerDependencies": {
 		"svelte": "^5.0.0"
 	},
@@ -46,8 +50,6 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
