--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16"
+		"@tailwindcss/typography": "^0.5.16",
+		"tailwind-merge": "^3.2.0"
 	},
 	"peerDependencies": {
 		"svelte": "^5.0.0"
